plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

// ---------------------------------------------------------
// CAMBIO 1: Aquí añadimos el repositorio de Modrinth
// ---------------------------------------------------------
repositories {
	mavenCentral()
	maven {
		name = "Modrinth"
		url = "https://api.modrinth.com/maven"
	}
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"viciontmedia" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// WaterMedia (Librería de Video)
	include(implementation("maven.modrinth:watermedia:3.0.0.23"))
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	inputs.property "archivesName", project.base.archivesName
	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}
	repositories {
		// Repositorios de publicación (no tocar)
	}
}